Fix filter box padding on mobile

--- a/content/themes/dude/sass/views/_reference-filters.scss
+++ b/content/themes/dude/sass/views/_reference-filters.scss
@@ -175,6 +175,11 @@
         padding-left: var(--padding-container-horizontal);
         padding-right: var(--padding-container-horizontal);
       }
+
+      @media (max-width: $container-mobile) {
+        padding-left: var(--padding-container-horizontal);
+        padding-right: var(--padding-container-horizontal);
+      }
     }
 
     // Show filters always on desktop
